--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "eslint": "^5.16.0",
     "prettier": "^1.18.2",
     "rollup": "^1.1.2",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-inject": "^3.0.0",
+    "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-uglify": "^6.0.2"
   }
 }
