--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2",
     "rollup": "^1.1.2",
     "rollup-plugin-buble": "^0.19.8",
