--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
+    "build:min": "rollup -c --environment ROLLUP_MIN:true",
     "eslint-init": "node ./node_modules/eslint/bin/eslint --init"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.1.4",
+    "dayjs": "^1.8.15",
+    "qs": "^6.7.0"
+  },
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "fs-extra": "^8.1.0",
     "prettier": "^1.18.2",
     "rollup": "^1.1.2",
     "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-inject": "^3.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-uglify": "^6.0.2"
   }
