--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "qs": "^6.7.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "fs-extra": "^8.1.0",
     "prettier": "^1.18.2",
-    "rollup": "^1.1.2",
+    "rollup": "^1.17.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-inject": "^3.0.0",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-inject": "^3.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-uglify": "^6.0.2"
