--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "core-js": "^3.1.4",
     "dayjs": "^1.8.15",
+    "js-tokens": "^5.0.0",
     "qs": "^6.7.0"
   },
   "devDependencies": {
