--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "buffer": "^5.6.0",
     "core-js": "^3.1.4",
     "dayjs": "^1.8.15",
     "js-tokens": "^5.0.0",
